# gyver-aws

./: Makefile  README.md  pyproject.toml  pyrightconfig.json  t.py
gyver/: __init__.py
gyver/aws/: auth.py  constants.py  credentials.py  exc.py  typedef.py
gyver/aws/http/: __init__.py  asyncio.py  opts.py  response.py  sync.py
gyver/aws/s3/: config.py  executor.py  handlers.py  models.py
tests/unit/: conftest.py  test_auth.py
