[tool.poetry]
name = "gyver-aws"
version = "0.1.0"
description = ""
authors = ["Gustavo Cardoso <self.gustavocorrea@gmail.com>"]
readme = "README.md"
packages = [{include = "gyver"}]

[tool.poetry.dependencies]
python = "^3.9"
gyver = "^2.0.8"
requests = "^2.29.0"
aiohttp = "^3.8.4"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
flake8 = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
gyver-tests = "^1.0.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.4"


[tool.poetry.group.compare.dependencies]
boto3 = "^1.26.123"


[tool.poetry.group.test-tools.dependencies]
awscli-local = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
